--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.1.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
