--- a/package.json
+++ b/package.json
@@ -23,12 +23,16 @@
     "@angular/router": "^18.0.0",
     "@capacitor/android": "6.1.0",
     "@capacitor/app": "6.0.0",
+    "@capacitor/camera": "^6.0.1",
     "@capacitor/core": "6.1.0",
+    "@capacitor/filesystem": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/keyboard": "6.0.1",
     "@capacitor/preferences": "^6.0.1",
     "@capacitor/status-bar": "6.0.0",
+    "@capacitor/storage": "^1.2.5",
     "@ionic/angular": "^8.0.0",
+    "@teachablemachine/image": "^0.8.5",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.5",
